Added new page to IS site

--- a/ISVFwithnewpage/index.html
+++ b/ISVFwithnewpage/index.html
@@ -56,6 +56,7 @@
                     <li><a href="#" class="active" type="button" data-reveal="#home"><i class="fa fa-home"></i>
                             Accueil</a></li>
                     <li><a href="#" type="button" data-reveal="#about"><i class="fa fa-briefcase"></i> Mission</a></li>
+                    <li><a href="#" type="button" data-reveal="#outils"><i class="fas fa-cogs"></i> Nos outils</a></li> <!-- A changer : Lien et icône -->
                     <li><a href="#" type="button" data-reveal="#services"><i class="fa fa-list"></i> Solutions</a></li>
                     <li><a href="#" type="button" data-reveal="#portfolio"><i class="fa fa-comments"></i> FAQ</a></li>
                     <li><a href="#" type="button" data-reveal="#blog"><i class="fa fa-user"></i> About</a></li>
@@ -231,7 +232,7 @@
                                                         </h6>
                                                         <h4 class="timeline-title">La Santé globale (physique, émotionnelle et mentale) des collaborateurs </h4>
                                                         <p class="timeline-text read-more-target-1">
-                                                            Elle a un impact direct sur l’ambiance de travail et sur la performance individuelle et collective. Diagnostiquer le niveau de santé des collaborateurs est primordial. Cela permet de favoriser les mesures qui garantissent un environnement professionnel
+                                                            Elle a un impact direct sur l’ambiance de travail et sur la performance individuelle et collective. Mesurer le niveau de santé des collaborateurs est primordial. Cela permet de favoriser les mesures qui garantissent un environnement professionnel
                                                             sain, base indispensable pour une performance humaine optimale de l’entreprise.
                                                         </p>
 
@@ -286,7 +287,7 @@
                                                     </h6>
                                                     <h4 class="timeline-title">Stress et Burn out</h4>
                                                     <p class="timeline-text read-more-target-3">
-                                                        Détecter et anticiper les situations de sur-stress et de Burn-out
+                                                        Détecter et anticiper les situations de sur-stress et de Burn-out.
                                                     </p>
                                                 </div>
                                                 <label for="post-3" class="read-more-trigger"></label>
@@ -301,7 +302,7 @@
                                                         </h6>
                                                         <h4 class="timeline-title">Réduction des Coûts</h4>
                                                         <p class="timeline-text read-more-target-4">
-                                                            Réduire les coûts de la santé en entreprise</p>
+                                                            Réduire les coûts de la santé en entreprise.</p>
                                                     </div>
                                                     <label for="post-4" class="read-more-trigger"></label>
                                                 </div>
@@ -316,7 +317,7 @@
                                                         </h6>
                                                         <h4 class="timeline-title">Agilité et Réactivité</h4>
                                                         <p class="timeline-text read-more-target-5">
-                                                            Rendre les organisations plus réactives et agiles</p>
+                                                            Rendre les organisations plus réactives et agiles.</p>
                                                     </div>
                                                     <label for="post-5" class="read-more-trigger"></label>
                                                 </div>
@@ -330,7 +331,7 @@
                                                         </h6>
                                                         <h4 class="timeline-title">Engagement</h4>
                                                         <p class="timeline-text read-more-target-6">
-                                                            Augmenter le niveau d'engagement des collaborateurs</p>
+                                                            Augmenter le niveau d'engagement des collaborateurs.</p>
                                                     </div>
                                                     <label for="post-6" class="read-more-trigger"></label>
                                                 </div>
@@ -343,7 +344,7 @@
                                                         </h6>
                                                         <h4 class="timeline-title">Optimisation</h4>
                                                         <p class="timeline-text read-more-target-7">
-                                                            Optimiser les coûts des organisations
+                                                            Optimiser les coûts des organisations.
 
                                                         </p>
                                                     </div>
@@ -358,7 +359,7 @@
                                                         </h6>
                                                         <h4 class="timeline-title">Performance</h4>
                                                         <p class="timeline-text read-more-target-8">
-                                                            Chiffrer la performance humaine d'une entreprise
+                                                            Chiffrer la performance humaine d'une entreprise.
 
                                                         </p>
                                                     </div>
@@ -2101,6 +2102,229 @@
 
 
             <!-- Notre Histoire Section END-->
+
+
+            <!-- Outils Section Start -->
+            <section class="about section" id="outils">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Insight Solutions, comment ça marche?</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3 class="cgv-partie1">1. Quizz:</h3>
+                                    <p>
+                                        &bull; Un lien internet est envoyé à tout le personnel d'une entreprise/structure.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Ce lien leur est directement envoyé sur leur adresse e-mail (aussi disponible par QR Code).
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; En cliquant sur ce lien, le personnel a accès au(x) questionnaire(s) qui se trouve(nt) sur nos serveurs.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Le(s) questionnaire(s) sont disponible(s) en permanence, et depuis n'importe quel appareil éléctronique.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Le temps de remplissage moyen est de 2-3 minutes par questionnaire.
+                                    </p>
+                                    <br />
+                                </div>
+                                <div class="about-text padd-15">
+                                    <h3 class="cgv-partie1">2. L'anonymat:</h3>
+                                    <p>
+                                        &bull; Le lien ne nous permet pas d'identifier les personnes ayant répondu au(x) questionnaire(s).
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Insight Solutions est en mesure de connaître le nombre de personnes qui cliquent sur le lien, mais pas le nombre de personnes qui y répondent.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Notre processus entier ne nous permet pas d'identifier les personnes, même en faisant des rapprochements.
+                                    </p>
+                                    <br />
+                                </div>
+                                <div class="about-text padd-15">
+                                    <h3 class="cgv-partie1">3. Les tableaux de bord:</h3>
+                                    <p>
+                                        &bull; Les réponses récoltées par le(s) questionnaire(s) sont transformées en données.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Ces données sont triées et regroupées selon l'organisation du client.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Ces données sont redistribuées dans un tableau de bord (dashboard).
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Chaque responsable a un tableau de bord spéciallement conçu pour lui.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Les tableaux de bord montrent les différentes données parmi les 7 modules choisis. Ils permettent d'identifier les gisements d'optimisation et leur localisation.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Les tableaux de bord (ou dashboard) permettent de comprendre et de suivre précisément chaque indicateur.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Les tableaux de bord (ou dashboard) sont organisés de façon à ce que les responsables trouvent les plans d'action adéquats à la situation.
+                                    </p>
+                                    <br />
+                                </div>
+                                <div class="about-text padd-15">
+                                    <h3 class="cgv-partie1">4. L'amélioration continue:</h3>
+                                    <p>
+                                        &bull; Les tableaux de bord permettent d'améliorer certains points.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Ces améliorations sont quantifiées et historisées.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; L'objectif est d'améliorer les performances qiu sont quantifiées dans les tableaux de bord.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Ces performances ont un impact direct sur la productivité de l'entreprise.
+                                    </p>
+                                    <br />
+                                    <p>
+                                        &bull; Le but est bien sûr d'améliorer continuellement cette performance.
+                                    </p>
+                                    <br />
+                                </div>
+                                <div class="about-text padd-15">
+                                    <h3 class="cgv-partie1">En résumé:</h3>
+                                    <img src="./images/diagramme-is3.png" class="image-diagramme" width="600px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- FIN Container -->
+
+                <!-- DEBUT FOOTER -->
+                <div class="footer">
+                    <div class="inner-footer footer-image">
+
+                        <!--  Nom Insight + Newsletter -->
+                        <!-- <div class="footer-items">
+                                <h1>Insight Solutions</h1>
+                                <p>La version moderne de l'audit du capital humain.</p>
+                                    <form action="#">
+                                        <input type="email" id="emailAddress" placeholder="adresse@email.com" autofocus />
+                                        <button type="button" class="btn-newsletter">Newsletter</button>
+                                    </form>
+                            </div> -->
+
+                        <!--  Partie Menu TEST -->
+                        <div class="footer-items">
+
+                            <img src="./images/Logowhiteis.png" alt="whitelogois" style="width: 150px;">
+
+                        </div>
+                        <div class="footer-items menupartst">
+                            <h3>Menu</h3>
+                            <div class="footer-border1"></div>
+                            <!-- Barre rouge sous titre -->
+
+                            <ul>
+                                <li><a href="#" type="button" data-reveal="#home">Accueil</a></li>
+                                <li><a href="#" type="button" data-reveal="#about">Missions</a></li>
+                                <li><a href="#" type="button" data-reveal="#services">Solutions</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="footer-items footer-second-menu">
+                            <ul class="footer-item-padding">
+
+                                <li>
+                                    <a href="#" type="button" data-reveal="#portfolio">FAQ
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="#" type="button" data-reveal="#blog">About
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="#" type="button" data-reveal="#contact">Contact </a>
+                                </li>
+
+
+                            </ul>
+                        </div>
+
+                        <!--  Partie Liens Utiles -->
+                        <div class="footer-items">
+                            <h3>Liens utiles</h3>
+                            <div class="footer-border1"></div>
+                            <!-- Barre rouge sous titre -->
+                            <ul>
+                                <li>
+                                    <a href="#" type="button" data-reveal="#cgv">Termes </a>
+                                </li>
+                                <li>
+                                    <a href="#" type="button" data-reveal="#cgpc">Confidentialité </a>
+                                </li>
+
+
+
+                            </ul>
+                        </div>
+
+                        <!--  Partie Contact -->
+                        <div class="footer-items">
+                            <h3>Contact</h3>
+                            <div class="footer-border1"></div>
+                            <!-- Barre rouge sous titre -->
+                            <ul>
+                                <li style="display: inline-flex;"><i class="fa fa-map-marker" aria-hidden="true"></i>Route de Thonon 152A, 1222 Vésenaz
+                                </li>
+                                <li><i class="fa fa-phone" aria-hidden="true"></i>058 255 28 00</li>
+                                <li style="display: inline-flex;"><i class="fa fa-envelope" aria-hidden="true"></i>info@insightsolutions.ch</li>
+                            </ul>
+
+                            <!--   Partie Social Icons -->
+                            <div class="footer-social-media">
+                                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                            </div>
+                        </div>
+                        <div class="subscribe">
+                            <form action="#">
+                                <ul>
+                                    <li><input type="email" id="emailAddress" placeholder="adresse@email.com" autofocus /></li>
+                                    <li><a href="#"><button type="button" class="btn-newsletter">Newsletter</button>
+                                        </a></li>
+                                </ul>
+                            </form>
+                        </div>
+                    </div>
+
+                    <!--  Copyright en bas de page -->
+                    <div class="footer-bottom">
+                        Copyright &copy; 2020, Insight Solutions. Tout droit réservé.
+                    </div>
+                </div>
+                <!--   FOOTER END -->
+            </section>
+            <!-- CGV Section End-->
 
 
 
