added page transition

--- a/ISVFwithnewpage/index.html
+++ b/ISVFwithnewpage/index.html
@@ -56,7 +56,8 @@
                     <li><a href="#" class="active" type="button" data-reveal="#home"><i class="fa fa-home"></i>
                             Accueil</a></li>
                     <li><a href="#" type="button" data-reveal="#about"><i class="fa fa-briefcase"></i> Mission</a></li>
-                    <li><a href="#" type="button" data-reveal="#outils"><i class="fas fa-cogs"></i> Nos outils</a></li> <!-- A changer : Lien et icône -->
+                    <li><a href="#" type="button" data-reveal="#outils"><i class="fas fa-cogs"></i> Nos outils</a></li>
+                    <!-- A changer : Lien et icône -->
                     <li><a href="#" type="button" data-reveal="#services"><i class="fa fa-list"></i> Solutions</a></li>
                     <li><a href="#" type="button" data-reveal="#portfolio"><i class="fa fa-comments"></i> FAQ</a></li>
                     <li><a href="#" type="button" data-reveal="#blog"><i class="fa fa-user"></i> About</a></li>
@@ -97,7 +98,7 @@
                         <p>La version moderne de l'audit du capital humain</p> -->
                         <section id="hero">
                             <div class="hero containerss">
-                                <div>
+                                <div class="transition-title">
                                     <h1>Bonjour, <span></span></h1>
                                     <h1>Bienvenue chez <span></span></h1>
                                     <h1>Insight Solutions. <span></span></h1>
@@ -106,6 +107,7 @@
                                     <a href="#" type="button" data-reveal="#services" class="cta">Nos
                                         Solutions</a>
                                 </div>
+
                             </div>
                         </section>
                         <div class="social-links">
@@ -232,8 +234,8 @@
                                                         </h6>
                                                         <h4 class="timeline-title">La Santé globale (physique, émotionnelle et mentale) des collaborateurs </h4>
                                                         <p class="timeline-text read-more-target-1">
-                                                            Elle a un impact direct sur l’ambiance de travail et sur la performance individuelle et collective. Mesurer le niveau de santé des collaborateurs est primordial. Cela permet de favoriser les mesures qui garantissent un environnement professionnel
-                                                            sain, base indispensable pour une performance humaine optimale de l’entreprise.
+                                                            Elle a un impact direct sur l’ambiance de travail et sur la performance individuelle et collective. Mesurer le niveau de santé des collaborateurs est primordial. Cela permet de favoriser les mesures qui garantissent un environnement professionnel sain,
+                                                            base indispensable pour une performance humaine optimale de l’entreprise.
                                                         </p>
 
                                                     </div>
